[package]
name = "smo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
mysql_async = { version = "*", default-features = false, features = ["minimal"] }
serde = { version = "1.0.204", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
dotenv = "0.15.0"
async-std = "1.12.0"
futures = "0.3.30"
serde_json = "1.0.122"
async-mutex = "1.4.0"
jsonwebtoken = { version = "9.3.0", features = ["default"] }
time = { version = "0.3.36", features = ["default"] }
sqlx = { version = "0.8.0", features = ["default", "mysql", "runtime-tokio"] }
ring = { version = "0.17.8", features = ["default", "alloc", "std"] }
tokio-tun = { version = "0.11.5" }
x25519-dalek = { version = "2.0.0-rc.3", features = ["getrandom"] }
pnet = "0.35.0"